// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ ChartContainer ]] renders chart container with all prop options: {"isWidget":false,"chartPresent":false} 1`] = `
"<div class=\\"border border-slate-400 py-4 rounded-lg\\">
  <div class=\\"px-5\\">
    <h2>Report header</h2>
  </div>
  <div class=\\"flex justify-between gap-4 px-5\\">
    <div class=\\"flex flex-wrap gap-x-12 gap-y-6\\">
      <p>Report stats</p>
    </div>
    <div class=\\"flex-shrink-0\\"></div>
  </div>
</div>"
`;

exports[`[[ ChartContainer ]] renders chart container with all prop options: {"isWidget":false,"chartPresent":true} 1`] = `
"<div class=\\"border border-slate-400 py-4 rounded-lg min-h-96\\">
  <div class=\\"px-5\\">
    <h2>Report header</h2>
  </div>
  <div class=\\"flex justify-between gap-4 px-5\\">
    <div class=\\"flex flex-wrap gap-x-12 gap-y-6\\">
      <p>Report stats</p>
    </div>
    <div class=\\"flex-shrink-0\\"></div>
  </div>
</div>"
`;

exports[`[[ ChartContainer ]] renders chart container with all prop options: {"isWidget":true,"chartPresent":false} 1`] = `
"<div class=\\"border border-slate-400 py-4 rounded-md\\">
  <div class=\\"px-5\\">
    <h2>Report header</h2>
  </div>
  <div class=\\"flex justify-between gap-4 px-5\\">
    <div class=\\"flex flex-wrap gap-x-12 gap-y-6\\">
      <p>Report stats</p>
    </div>
    <div class=\\"flex-shrink-0\\"></div>
  </div>
</div>"
`;

exports[`[[ ChartContainer ]] renders chart container with all prop options: {"isWidget":true,"chartPresent":true} 1`] = `
"<div class=\\"border border-slate-400 py-4 rounded-md min-h-96\\">
  <div class=\\"px-5\\">
    <h2>Report header</h2>
  </div>
  <div class=\\"flex justify-between gap-4 px-5\\">
    <div class=\\"flex flex-wrap gap-x-12 gap-y-6\\">
      <p>Report stats</p>
    </div>
    <div class=\\"flex-shrink-0\\"></div>
  </div>
</div>"
`;
